--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,114 @@
-p {
-  color: red;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  /* 
+  font-size: 16px;
+  line-height: 0.5;
+  background-color: #f4f4f4;
+  */
+}
+
+/*
+div {
+  background-color: black; 
+  color: #ff0000;
   font-size: 20px;
+  border-color: red;
+  border-width: 5px;
+  border-style: dotted;
+  border-radius: 100px;
+  text-align: center;
+  width: 25%;
+  margin: auto;
+  margin-top: 60px;
+  background-image: url("../Images_HTML/Upload_Search_URL.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+*/
+
+/* .one,
+.two,
+.three {
+  padding: 10px;
+  margin: 10px;
+  font-size: 35px;
+  background-color: #eee;
+  text-align: center;
+  width: 50%;
+  height: 100px;
+  margin: auto;
+  border-right: 3px solid black;
+  border-left: 3px solid black;
+  border-bottom-right-radius: 20px;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+}
+
+.one {
+  background-color: red;
+  border-bottom: 5px solid red;
+  color: red;
+}
+
+.two {
+  background-color: white;
+  border-bottom: 5px solid white;
+  color: gold;
+}
+
+.three {
+  background-color: black;
+  border-bottom: 5px solid black;
+  color: black;
+} */
+
+/* .test {
+
+  background-color: aqua;
+} */
+
+/* p {
+  background-color: white;
+  text-align: center;
+  text-overflow: ellipsis;
+  direction: rtl; 
+  text-shadow: 1px 1px 2px black, 0 0 1em red;
+} 
+
+img {
+  vertical-align: middle;
+  background-color: aquamarine;
+} */
+
+/* div {
+  margin: auto;
+  width: fit-content;
+  border: 2px solid red;
+  text-align: center;
+  padding: 55px;
+}
+
+h1 {
+  border: 2px solid;
+  border-color: inherit;
+  padding: inherit;
+} */
+
+
+
+
+
+div {
+  text-align: center;
+  background-color: #eee;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  width: calc((100% - 55px) / 4);
+  margin-left: 11px;
+  float: left;
 }
