--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,5 @@
-body {
+html {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  /* 
-  font-size: 16px;
-  line-height: 0.5;
-  background-color: #f4f4f4;
-  */
 }
 
 /*
@@ -99,16 +93,32 @@ h1 {
   padding: inherit;
 } */
 
+* {
+  box-sizing: border-box;
+}
 
+:root {
+  --main-color: #ff0000;
+  --main-bg-color: #eee;
 
+}
 
-
-div {
-  text-align: center;
+.flex {
   background-color: #eee;
-  padding-top: 11px;
-  padding-bottom: 11px;
-  width: calc((100% - 55px) / 4);
-  margin-left: 11px;
-  float: left;
+  display: flex;
+  flex-flow: row wrap;
+  /* justify-content: center;
+  align-items: center;
+  align-content: center; */
+  height: 900px;
+  padding: 30px;
+  margin: 30px auto;
+}
+
+.flex div {
+  background-color: red;
+  color: white;
+  text-align: center;
+  width: 80px;
+  padding: 10px;
 }
