--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-html {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 /*
 div {
   background-color: black; 
@@ -20,9 +16,9 @@ div {
   background-position: 50% 50%;
   background-size: cover;
 }
-*/
 
-/* .one,
+
+.one,
 .two,
 .three {
   padding: 10px;
@@ -59,14 +55,14 @@ img {
   background-color: black;
   border-bottom: 5px solid black;
   color: black;
-} */
+}
 
-/* .test {
+.test {
 
   background-color: aqua;
-} */
+}
 
-/* p {
+p {
   background-color: white;
   text-align: center;
   text-overflow: ellipsis;
@@ -77,9 +73,9 @@ img {
 img {
   vertical-align: middle;
   background-color: aquamarine;
-} */
+}
 
-/* div {
+div {
   margin: auto;
   width: fit-content;
   border: 2px solid red;
@@ -92,6 +88,11 @@ h1 {
   border-color: inherit;
   padding: inherit;
 } */
+
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 * {
   box-sizing: border-box;
@@ -115,10 +116,12 @@ h1 {
 }
 
 .grid div {
+  display: flex;
   padding: 20px;
   background-color: red;
   color: white;
-  text-align: center;
+  justify-content: center;
+  align-items: center;
   font-weight: bold;
   font-size: 25px;
 }
